--- a/main.html
+++ b/main.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Главная страница</title>
+ </head>
+ <body>
+  <header>
+  <img src=image.png alt="png">
+  </header>
+  <main>
+  </Main>
+  <footer>
+  </footer>
+ </body>
+</html>
