--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>Главная страница</title>
+  <link rel="stylesheet" src="css/style.css">
  </head>
  <body>
   <header>
