--- a/main.html
+++ b/main.html
@@ -7,7 +7,17 @@
  </head>
  <body>
   <header>
-  <img src=image.png alt="png">
+   <h1>Главная страница сайта ЭПА</h1>
+   <p>Добро пожаловать на сайт экономического
+партнёрского альянса.Что означает это словосочетание?
+Экономический значит,что главный объект партнерства
+-это установление крепких партнёрских экономических
+связей.Партнерский значит,что все связи осуществляются
+на основе равноправного партнёрства, подчинённого
+не кому-либо,а лишь уставу альянса, определяющего
+права и обязанности членов объединения.То есть,
+функция нашего объединения-это установление крепких
+партнёрских связей на экономических началах.</p>
   </header>
   <main>
   </Main>
