--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" src="css/style.css">
  </head>
  <body>
-  <header>
+  <header class="header">
    <h1>Главная страница сайта ЭПА</h1>
    <p>Добро пожаловать на сайт экономического
 партнёрского альянса.Что означает это словосочетание?
