--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
  <head>
   <meta charset="utf-8">
   <title>Главная страница</title>
-  <link rel="stylesheet" src="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
-  <header class="header">
+  <header>
    <h1>Главная страница сайта ЭПА</h1>
    <p>Добро пожаловать на сайт экономического
 партнёрского альянса.Что означает это словосочетание?
