--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Главная страница</title>
+  <title>Главная страница.</title>
   <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
