--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
  </head>
  <body>
   <header>
-   <h1>Главная страница сайта ЭПА</h1>
-   <p>Добро пожаловать на сайт экономического
+   <h1 class=st1>Главная страница сайта ЭПА</h1>
+   <p class=st2>Добро пожаловать на сайт экономического
 партнёрского альянса.Что означает это словосочетание?
 Экономический значит,что главный объект партнерства
 -это установление крепких партнёрских экономических
