--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
  </head>
  <body>
   <header>
-   <h1 class=st1>Главная страница сайта ЭПА</h1>
+   <div class=frame><h1 class=st1 align=right>Главная страница сайта ЭПА</h1></div>
    <p> </p>
   </header>
   <main>
