--- a/main.html
+++ b/main.html
@@ -14,6 +14,8 @@
    <h1>жопа</h1>
   </Main>
   <footer>
+   <p>Экономический партнёрский альянс©</p>
+   <p>Все права защищены ©</p>
   </footer>
  </body>
 </html>
