--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
    <p> </p>
   </header>
   <main>
-   <h1>жопа</h1>
+   <h1 class=frame>Меню сайта:</h1>
   </Main>
   <footer>
    <p>Экономический партнёрский альянс©</p>
