--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
  </head>
  <body>
   <header>
-   <div class=frame><h1 class=st1 align=right>Главная страница сайта ЭПА</h1></div>
-   <p> </p>
+   <div class=frame><h1 class=st1 align=right>Экономический партнёрский альянс</h1></div>
+   <p>nobody12398.github.io</p>
+   <p></p>
   </header>
   <main>
    <h1 class=frame>Меню сайта:</h1>
