--- a/main.html
+++ b/main.html
@@ -12,7 +12,10 @@
    <p></p>
   </header>
   <main>
-   <h1 class=frame>Меню сайта:</h1>
+   <ul class=frame>
+    <h1 class=st1>Меню сайта:</h1>
+    <li><a href="pages/terms.html" class=link></li>
+   </ul>
   </Main>
   <footer>
    <p>Экономический партнёрский альянс©</p>
