--- a/main.html
+++ b/main.html
@@ -12,10 +12,8 @@
    <p></p>
   </header>
   <main>
-   <ul class=frame>
-    <h1 class=st1>Меню сайта:</h1>
-    <li><a href="pages/terms.html" class=link></li>
-   </ul>
+   <h1 class=st1>Меню сайта:>
+   <a href="pages/terms.html" class=link>Условия оформили членства</a>
   </Main>
   <footer>
    <p>Экономический партнёрский альянс©</p>
