--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
  <body>
   <header>
    <div class=frame><h1 class=st1 align=right>Экономический партнёрский альянс</h1></div>
-   <p>nobody12398.github.io</p>
+   <p class=st1>nobody12398.github.io</p>
    <p></p>
   </header>
   <main>
