--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
    <p></p>
   </header>
   <main>
-   <h1 class=st1>Меню сайта:>
+   <h1 class=st1>Меню сайта:</h1>
    <a href="pages/terms.html" class=link>Условия оформили членства</a>
   </Main>
   <footer>
