--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
   </header>
   <main>
    <h1 class=st1>Меню сайта:</h1>
-   <a href="pages/terms.html" class=link>Условия оформили членства</a>
+   <a href="pages/terms.html" class=link>Условия оформления членства</a>
   </Main>
   <footer>
    <p>Экономический партнёрский альянс©</p>
