--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
    <p></p>
   </header>
   <main>
-   <h1 class=st1>Меню сайта:</h1>
-   <a href="pages/terms.html" class=link>Условия оформления членства</a>
+   <div class=tree><h1 class=st1>Меню сайта:</h1></div>
+   <div class=frame><a href="pages/terms.html" class=link>Условия оформления членства</a></div>
   </Main>
   <footer>
    <p>Экономический партнёрский альянс©</p>
