--- a/main.html
+++ b/main.html
@@ -14,6 +14,9 @@
   <main>
    <div class=tree><h1 class=st1>Меню сайта:</h1></div>
    <div class=frame><a href="pages/terms.html" class=link>Условия оформления членства</a></div>
+   <div class=frame><a href="pages/trade.html" class=link>Биржа</a></div>
+   <div class=frame><a href="pages/archive.html" class=link>Общедоступный архив</a></div>
+
   </Main>
   <footer>
    <p>Экономический партнёрский альянс©</p>
