--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 
   </Main>
   <footer>
-   <p>Экономический партнёрский альянс©</p>
-   <p>Все права защищены ©</p>
+   <div class=frame><p class=st1>Экономический партнёрский альянс©</p>
+   <p class=st1>Все права защищены ©</p></div>
   </footer>
  </body>
 </html>
