--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
  </head>
  <body>
   <header>
-   <div class=frame><h1 class=st1 align=right>Экономический партнёрский альянс</h1></div>
+   <div class=frame>
+<img src="image.png" alt="nnn">
+<h1 class=st1 align=right>Экономический партнёрский альянс</h1></div>
    <p class=st1>nobody12398.github.io</p>
    <p></p>
   </header>
@@ -19,7 +21,7 @@
 
   </Main>
   <footer>
-   <div class=frame><p class=st1>Экономический партнёрский альянс©</p>
+   <div class=frame1><p class=st1>Экономический партнёрский альянс©</p>
    <p class=st1>Все права защищены ©</p></div>
   </footer>
  </body>
