--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <header>
    <div class=frame>
 <img src="image.png" alt="nnn">
-<h1 class=st1 align=right>Экономический партнёрский альянс</h1></div>
+<h1 class=st1 align=right>Главная страница</h1></div>
    <p class=st1>nobody12398.github.io</p>
    <p></p>
   </header>
