--- a/pages/terms.html
+++ b/pages/terms.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<Html>
+<html>
  <head>
-  <Meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css"
+  <meta charset="utf-8">
+  <title>Условия</title>
+  <link rel="stylesheet" href="../css/style.css">
  </head>
  <body>
+  <header>
+   <div class=frame>
+<img src="image.png" alt="nnn">
+<h1 class=st1 align=right>Условия оформления членства</h1></div>
+   <p class=st1>nobody12398.github.io</p>
+   <p></p>
+  </header>
+  <main>
+   
+  </Main>
+  <footer>
+   <div class=frame1><p class=st1>Экономический партнёрский альянс©</p>
+   <p class=st1>Все права защищены ©</p></div>
+  </footer>
  </body>
-</Html>
+</html>
