--- a/pages/terms.html
+++ b/pages/terms.html
@@ -8,7 +8,7 @@
  <body>
   <header>
    <div class=frame>
-<img src="image.png" alt="nnn">
+<img src="../image.png" alt="nnn">
 <h1 class=st1 align=right>Условия оформления членства</h1></div>
    <p class=st1>nobody12398.github.io</p>
    <p></p>
